# batchee

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  build-service  docker-entrypoint.sh  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-pipeline.yml  lint_and_test_and_bump.yml  lint_and_test_on_pull_request.yml  on_push.yml  pull-request-received.yml  pull_request.yml  push.yml  release-created.yml  reusable_python_and_poetry_setup.yml  reusable_run_tests.yml  run_tests.yml
batchee/: tempo_filename_parser.py
batchee/harmony/: cli.py  service_adapter.py  util.py
batcher/: harmony_adapter.py  harmony_cli.py  tempo_filename_parser.py
batcher/harmony/: cli.py  service_adapter.py  util.py
concat_batcher/: tempo_filename_parser.py
docker/: Dockerfile  Readme.md
tests/: conftest.py  test_filename_grouping.py  test_harmony_adapter.py
tests/data/harmony/source/: catalog.json  catalog0.json  catalog1.json  granule_S012G01.json  granule_S012G02.json  granule_S013G01.json  granule_S013G02.json  granule_S014G01.json  granule_S014G02.json
