[tool.poetry]
name = "batchee"
version = "1.3.0a0"
description = "Determine how to group together input files into batches for subsequent concatenation"
authors = ["Daniel Kaufman <daniel.kaufman@nasa.gov>"]
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "batcher" },
]

[tool.poetry.dependencies]
python = "^3.10"
harmony-service-lib = "^1.0.26"

[tool.poetry.scripts]
batchee_harmony = 'batcher.harmony.cli:main'
batchee = 'batcher.tempo_filename_parser:main'

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.4"
ruff = ">=0.4.1,<0.6.0"
pytest = "^8.1.1"
black = "^24.4.0"
mypy = "^1.9.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
  "harmony.*",
  "pystac.*"
]
ignore_missing_imports = true

[tool.black]
line-length = 100

[tool.ruff]
builtins = ["ellipsis"]
exclude = [
  ".eggs",
  "doc",
  "_typed_ops.pyi",
]
target-version = "py310"

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
  "E402",
  "E501",
  "E731",
]
select = [
  "F", # Pyflakes
  "E", # Pycodestyle
  "W",
  "I", # isort
  "UP", # Pyupgrade
]
